<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#70ffffff"
    tools:context="com.example.jdachuk.sunrisesunsetapplication.InfoFragment">

    <TextView
        android:id="@+id/day_length"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/day_length"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day_length_info"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/day_length"
        app:layout_constraintTop_toTopOf="@id/day_length" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/sunrise"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/day_length"
        app:layout_constraintTop_toBottomOf="@id/day_length" />

    <TextView
        android:id="@+id/sunrise_info"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/day_length_info"
        app:layout_constraintTop_toTopOf="@id/sunrise" />


    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/sunset"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/day_length"
        app:layout_constraintTop_toBottomOf="@id/sunrise" />

    <TextView
        android:id="@+id/sunset_info"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/day_length_info"
        app:layout_constraintTop_toTopOf="@id/sunset" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/twilight_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunset">

        <TextView
            android:id="@+id/twilight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twilight"
            android:textSize="26sp"
            android:drawablePadding="5dp"
            android:drawableEnd="@drawable/ic_brightness_4_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/twilight_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/twilight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twilight_end"/>

        <TextView
            android:id="@+id/twilight_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/twilight"
            app:layout_constraintStart_toEndOf="@id/twilight_start"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/twilight_start_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/twilight_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twilight_end_info"/>

        <TextView
            android:id="@+id/twilight_end_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/twilight_end"
            app:layout_constraintStart_toEndOf="@id/twilight_start_info"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
